fix script injection on tabs

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -22,7 +22,7 @@
 </style>
 </head>
 <body>
-  <h1>CS:GO Skin Scraper</h1>
+  <h1>CS2 Skin Scraper</h1>
   <label for="itemName">Item Name (e.g., AK-47 | Inheritance):</label>
   <input id="itemName" type="text" placeholder="Type skin name (e.g. AK-47 | Inheritance)" autocomplete="off">
   <div id="suggestions" class="suggestions-container"></div>
