tryting using websockets

--- a/chrome_extension/popup.html
+++ b/chrome_extension/popup.html
@@ -37,6 +37,7 @@
   </select>
   <button id="scrapeBtn">Start Scraping</button>
   <div id="status"></div>
+  <script src="socket.io.min.js"></script>
   <script src="popup.js"></script>
 </body>
 </html>
